[gd_scene load_steps=4 format=3 uid="uid://cid77gmg01m5s"]

[ext_resource type="Script" path="res://Objects/Scripts/decoration_menu_item.gd" id="1_0i3pa"]
[ext_resource type="Resource" uid="uid://hl6k4xercyag" path="res://Resources/Decorations/bauble.tres" id="2_j4qts"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_3nme7"]
size = Vector2(64, 64)

[node name="DecorationMenuItem" type="PanelContainer"]
custom_minimum_size = Vector2(120, 0)
mouse_default_cursor_shape = 2
script = ExtResource("1_0i3pa")
decoration_info = ExtResource("2_j4qts")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DecorationTexture" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_3nme7")

[node name="DecorationName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MissingName"
horizontal_alignment = 1
